--- a/gamestore/pom.xml
+++ b/gamestore/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>gamestore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gamestore</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Final Project: Game Store server</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
