--- a/gamestore/pom.xml
+++ b/gamestore/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.company</groupId>
 	<artifactId>gamestore</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.7.7</version>
 	<name>gamestore</name>
 	<description>Final Project: Game Store server</description>
 	<properties>
